# katas

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py
data-eng/: kata-1-sql-dev.md  kata-2-data-eng-prog.md
pykata/codewars/sum_of_odd_numbers/: __init__.py
pykata/codewars/take-a-ten-minute-walk/: __init__.py
pykata/core/: __init__.py  example.py  uncovered.py
pykata/credit_card_mask/: __init__.py  re_solution.py
