[metadata]
name = pykata
version = attr: pykata.core.__version__
description = Python Katas
url = https://github.com/ivangeorgiev/katas
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
   = .
; packages = find:
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = .

# [options.entry_points]
# console_scripts =
#     pygems = pygems.cli:main